# Upscale-A-Video

./: README.md  pyproject.toml  setup.cfg  setup.py
configs/: __init__.py
examples/: basic_usage.py
models_video/: attention.py  autoencoder_kl_cond_video.py  pipeline_upscale_a_video.py  scheduling_ddim.py  temporal_module.py  unet_blocks.py  unet_video.py  vae_video.py
upscale_a_video/: __init__.py  download.py  upscaler.py
