[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upscale-a-video"
version = "0.1.0"
description = "Temporal-Consistent Diffusion Model for Real-World Video Super-Resolution"
readme = "README.md"
license = {text = "NTU S-Lab License 1.0"}
requires-python = ">=3.9"
authors = [
    {name = "Shangchen Zhou"},
    {name = "Peiqing Yang"},
    {name = "Jianyi Wang"},
    {name = "Yihang Luo"},
    {name = "Chen Change Loy"},
]
keywords = ["video", "super-resolution", "upscaling", "diffusion", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "accelerate>=0.18.0",
    "av>=9.1.0",
    "decord>=0.6.0",
    "diffusers>=0.16.0",
    "einops>=0.6.1",
    "imageio>=2.25.0",
    "numpy>=1.24.0,<2",
    "imageio-ffmpeg>=0.4.8",
    "timm>=0.4.12",
    "transformers>=4.28.1",
    "xformers>=0.0.20",
    "sentencepiece>=0.1.99",
    "rotary-embedding-torch>=0.2.3",
    "tokenizers>=0.14,<0.19",
    "tqdm",
    "pandas",
    "omegaconf",
    "opencv-python",
    "scipy",
    "pillow",
]

[project.optional-dependencies]
llava = [
    "pyfiglet",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://shangchenzhou.com/projects/upscale-a-video/"
Repository = "https://github.com/emanuele-artioli/Upscale-A-Video"
Paper = "https://arxiv.org/abs/2312.06640"

[tool.setuptools.packages.find]
where = ["."]
include = ["upscale_a_video*", "models_video*", "llava*", "configs*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
models_video = ["RAFT/*.pth"]
configs = ["*.json"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120
