[metadata]
name = upscale-a-video
version = 0.1.0
description = Temporal-Consistent Diffusion Model for Real-World Video Super-Resolution
long_description = file: README.md
long_description_content_type = text/markdown
author = Shangchen Zhou, Peiqing Yang, Jianyi Wang, Yihang Luo, Chen Change Loy
license = NTU S-Lab License 1.0
url = https://github.com/emanuele-artioli/Upscale-A-Video
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Multimedia :: Video

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    torch>=2.0.0
    torchvision
    accelerate>=0.18.0
    av>=9.1.0
    decord>=0.6.0
    diffusers>=0.16.0
    einops>=0.6.1
    imageio>=2.25.0
    numpy>=1.24.0,<2
    imageio-ffmpeg>=0.4.8
    timm>=0.4.12
    transformers>=4.28.1
    xformers>=0.0.20
    sentencepiece>=0.1.99
    rotary-embedding-torch>=0.2.3
    tokenizers>=0.14,<0.19
    gdown>=4.6.0
    tqdm
    pandas
    omegaconf
    opencv-python
    scipy
    pillow

[options.packages.find]
include =
    upscale_a_video*
    models_video*
    llava*
    configs*

[options.package_data]
* = *.json, *.yaml, *.yml
models_video = RAFT/*.pth
configs = *.json

[options.extras_require]
llava = pyfiglet
dev =
    pytest
    pytest-cov
    black
    isort
    flake8
